# validator

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
validator/: Cargo.toml
validator/src/: contains.rs  display_impl.rs  email.rs  length.rs  lib.rs  must_match.rs  range.rs  traits.rs  types.rs  urls.rs
validator/src/span/: email.rs  mod.rs
validator/src/validation/: cards.rs  contains.rs  custom.rs  does_not_contain.rs  domain.rs  email.rs  ip.rs  length.rs  length_utf16.rs  mod.rs  must_match.rs  must_not_match.rs  nested.rs  non_control_character.rs  phone.rs  range.rs  regex.rs  required.rs  starts_with.rs  urls.rs
validator/tests/: display.rs  schemars.rs
validator_derive/: Cargo.toml
validator_derive/src/: asserts.rs  case.rs  lib.rs  lit.rs  quoting.rs  types.rs  utils.rs  validation.rs
validator_derive/src/tokens/: cards.rs  contains.rs  custom.rs  does_not_contain.rs  email.rs  ip.rs  length.rs  mod.rs  must_match.rs  must_not_match.rs  nested.rs  non_control_character.rs  range.rs  regex.rs  required.rs  required_nested.rs  schema.rs  url.rs
validator_derive/tests/: compile_test.rs  complex.rs  contains.rs  credit_card.rs  custom.rs  email.rs  length.rs  must_match.rs  nested.rs  non_control.rs  phone.rs  range.rs  regex.rs  required.rs  schema.rs  test_derive.rs  url.rs
validator_derive/tests/compile-fail/: custom_not_string.rs  custom_not_string.stderr  no_nested_validations.rs  no_nested_validations.stderr  no_validations.rs  no_validations.stderr  not_a_string_type.stderr  unexpected_list_validator.stderr  unnamed_fields.rs  unnamed_fields.stderr  unsupported_field_type.rs
validator_derive/tests/compile-fail/length/: equal_and_min_max_set.rs  equal_and_min_max_set.stderr  no_args.rs  no_args.stderr  unknown_arg.rs  unknown_arg.stderr  wrong_arg_type.rs  wrong_type.rs  wrong_type.stderr
validator_derive/tests/compile-fail/must_match/: field_doesnt_exist.rs  field_doesnt_exist.stderr  field_type_doesnt_match.rs  field_type_doesnt_match.stderr
validator_derive/tests/compile-fail/range/: missing_arg.rs  no_args.rs  no_args.stderr  unknown_arg.rs  unknown_arg.stderr  wrong_arg_type.rs  wrong_type.rs  wrong_type.stderr
validator_derive/tests/compile-fail/schema/: missing_function.rs  missing_function.stderr
validator_derive/tests/run-pass/: absolute_path.rs  custom.rs  email.rs  length.rs  lifetime.rs  must_match.rs  phone.rs  range.rs  regex.rs  schema.rs  url.rs
validator_derive_tests/: Cargo.toml  nested.rs
validator_derive_tests/src/: main.rs
validator_derive_tests/tests/: compile_test.rs  complex.rs  constraints.rs  contains.rs  credit_card.rs  custom.rs  custom_args.rs  does_not_contain.rs  email.rs  flatten.rs  ip.rs  length.rs  length_utf16.rs  must_match.rs  must_not_match.rs  nest_all_fields.rs  nested.rs  non_control.rs  phone.rs  range.rs  regex.rs  rename.rs  required.rs  schema.rs  schema_args.rs  skip.rs  starts_with.rs  unsupported_array.rs  url.rs
validator_derive_tests/tests/compile-fail/: custom_not_string.rs  nest_all_fields_wo_validation.rs  nest_all_fields_wo_validation.stderr  no_nested_validations.rs  no_nested_validations.stderr  no_validations.rs  no_validations.stderr  not_a_string_type.rs  not_a_string_type.stderr  not_a_struct.rs  not_a_struct.stderr  unexpected_list_validator.rs  unexpected_list_validator.stderr  unexpected_validator.rs  unexpected_validator.stderr  unnamed_fields.stderr  unsupported_field_type.stderr  wrong_crate_alias.rs  wrong_crate_alias.stderr
validator_derive_tests/tests/compile-fail/custom/: custom_not_string.rs  custom_not_string.stderr  defined_args_in_custom.rs  defined_args_in_custom.stderr  different_lifetime.rs  different_lifetime.stderr  function_without_reference.rs  function_without_reference.stderr  missing_function_arg.rs  missing_function_arg.stderr  multiple_types_in_arg.rs  multiple_types_in_arg.stderr  type_without_reference.rs  type_without_reference.stderr  validate_not_impl_with_args.rs  validate_not_impl_with_args.stderr
validator_derive_tests/tests/compile-fail/length/: equal_and_min_max_set.rs  equal_and_min_max_set.stderr  no_args.rs  no_args.stderr  unknown_arg.rs  unknown_arg.stderr  wrong_type.rs  wrong_type.stderr
validator_derive_tests/tests/compile-fail/must_match/: field_doesnt_exist.rs  field_doesnt_exist.stderr  field_type_doesnt_match.rs  field_type_doesnt_match.stderr  unexpected_name_value.stderr
validator_derive_tests/tests/compile-fail/must_not_match/: field_doesnt_exist.rs  field_doesnt_exist.stderr  field_type_doesnt_match.rs  field_type_doesnt_match.stderr  unexpected_name_value.rs  unexpected_name_value.stderr
validator_derive_tests/tests/compile-fail/nest_all_fields/: no_nested_validations.rs  no_nested_validations.stderr
validator_derive_tests/tests/compile-fail/range/: no_args.rs  no_args.stderr  unknown_arg.rs  unknown_arg.stderr  wrong_type.rs  wrong_type.stderr
validator_derive_tests/tests/compile-fail/schema/: missing_function.rs  missing_function.stderr
validator_derive_tests/tests/run-pass/: absolute_path.rs  crate_alias.rs  custom.rs  default_struct_parameters.rs  email.rs  length.rs  lifetime.rs  methods_collision.rs  must_match.rs  must_not_match.rs  nest_all_fields_always_valid.rs  optional_field.rs  phone.rs  range.rs  regex.rs  schema.rs  unsupported_field_type.rs  url.rs  use_in_declarative_macros.rs
validator_types/: Cargo.toml
validator_types/src/: lib.rs
