[package]
name = "validator"
version = "0.15.0"
authors = ["Vincent Prouillet <hello@vincentprouillet.com"]
license = "MIT"
description = "Common validation functions (email, url, length, ...) and trait - to be used with `validator_derive`"
homepage = "https://github.com/Keats/validator"
repository = "https://github.com/Keats/validator"
keywords = ["validation", "api", "validator"]
edition = "2018"
readme = "../README.md"

[dependencies]
url = "2"
regex = "1"
lazy_static = "1"
idna = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
validator_derive = { version = "0.15", path = "../validator_derive", optional = true }
card-validate = { version = "2.2", optional = true }
phonenumber = { version = "0.3", optional = true }
unic-ucd-common = { version = "0.9", optional = true }
indexmap = {version = "1", features = ["serde-1"], optional = true }
schemars = { version = "0.8", optional = true }
# used only for schemars integration test - dev-dependencies can't be optional
rocket = { version = "0.5.0-rc.2", optional = true, features = ["json"] }
rocket_okapi = { version = "0.8.0-rc.2", optional = true }


[features]
phone = ["phonenumber", "validator_derive/phone"]
card = ["card-validate", "validator_derive/card"]
unic = ["unic-ucd-common", "validator_derive/unic"]
derive = ["validator_derive"]

[[test]]
name = "schemars"
required-features = ["phone", "schemars", "rocket", "rocket_okapi"]
