[package]
name = "validator_derive"
version = "0.16.0"
authors = ["Vincent Prouillet <hello@vincentprouillet.com"]
license = "MIT"
description = "Macros 1.1 implementation of #[derive(Validate)]"
homepage = "https://github.com/Keats/validator"
repository = "https://github.com/Keats/validator"
keywords = ["validation", "api", "validator"]
edition = "2021"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
regex = { version = "1", default-features = false, features = ["std"] }
lazy_static = "1"
darling = { version = "0.20", features = ["diagnostics"] }
