[package]
name = "validator_derive_tests"
version = "0.1.0"
authors = ["Vincent Prouillet <hello@vincentprouillet.com>"]
edition = "2018"

[dev-dependencies]
validator = { version = "0.14", path = "../validator", features = ["phone", "card", "unic", "derive", "indexmap"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trybuild = "1.0"
regex = "1"
lazy_static = "1"

[dependencies]
indexmap = {version = "1", features = ["serde-1"], optional = true }
