[package]
name = "validator_types"
version = "0.15.0"
authors = ["Vincent Prouillet <hello@vincentprouillet.com"]
license = "MIT"
description = "Basic type for validator and validator_derive"
homepage = "https://github.com/Keats/validator"
repository = "https://github.com/Keats/validator"
keywords = ["validation", "api", "validator"]
edition = "2018"


[features]
phone = []
card = []
unic = []

[dependencies]
syn = { version = "1", features = ["extra-traits"] }
proc-macro2 = "1"
